# kvm-manager-v2

./: .dockerignore  .gitignore  DEPLOYMENT_GUIDE.md  DOCKER.md  DOCKER_DEPLOYMENT.md  DOCKER_FIX.md  Dockerfile  Dockerfile.simple  KVM_PORT_NAMES_USAGE.md  README.md  configure-kvm-names.sh  configure-urls.sh  debug-build.sh  deploy.sh  docker-compose.yml  docker-entrypoint.sh  nginx.conf  package.json.dis  pyproject.toml  resolve-ports.sh  test-build.sh  verify-deployment.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-build.yml
kvm-mgr-service/: main.py  settings.json
kvm-mgr-ui/: README.md  index.html  package-lock.json  package.json  script.js  server.js  start.sh  styles.css
